--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,10 @@
 # Application
 BASE_API_URL=api
-CLIENT_URL=http://138.124.3.170:8080
+CLIENT_URL=https://xd731.ru
 EMAIL=katshido.2003@gmail.com
 
 # Server
-PORT=8080
+PORT=443
 
 # Database
 MONGO_URI=mongodb://root:example_password@mongodb:27017/admin
@@ -26,7 +26,7 @@ JWT_REFRESH_LIFE=5184000000
 # Yandex OAuth
 YANDEX_CLIENT_ID=69c51b23dd554435a6551747e607098d
 YANDEX_CLIENT_SECRET=2f897515629a4473b2df7f164f28ca15
-YANDEX_CALLBACK_URL=http://138.124.3.170:8080/api/auth/yandex/callback
+YANDEX_CALLBACK_URL=https://xd731.ru/api/auth/yandex/callback
 
 # Vkontakte OAuth
 VKONTAKTE_CLIENT_ID=your_vkontakte_client_id
